Fix: z-index

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 html {
+	margin: 0;
+	padding: 0;
 	--main-color: white;
 	--white: #FFF;
 	--black: #000;
@@ -14,13 +16,16 @@ html {
 }
 body {
 	margin: 0;
+	padding: 0;
 	font-family: Gafata;
 	text-align: center;
 	font-size: 1.5em;
 	background: black;
 	color: var(--main-color);
 }
-
+h1 {
+    margin-top: 0;
+}
 .main-container {
 	display: flex;
 	flex-direction: row;
@@ -41,62 +46,20 @@ body {
 	text-decoration: none;
 }
 
-/* ---- reset ---- */
-
-body {
-  margin: 0;
-}
+/* ---- particles.js container ---- */
 
 canvas {
   display: block;
   vertical-align: bottom;
 }
 
-/* ---- particles.js container ---- */
-
 #particles-js {
-	z-index: -1;
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	background-color: transparent;
 	background-image: url("");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 50% 50%;
-}
-
-/* ---- stats.js ---- */
-
-.count-particles{
-  background: #000022;
-  position: absolute;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13E8E9;
-  font-size: .8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-
-.js-count-particles{
-  font-size: 1.1em;
-}
-
-#stats,
-.count-particles{
-  -webkit-user-select: none;
-}
-
-#stats{
-  border-radius: 3px 3px 0 0;
-  overflow: hidden;
-}
-
-.count-particles{
-  border-radius: 0 0 3px 3px;
 }
